--- a/srmud/SRmud.vcxproj.filters
+++ b/srmud/SRmud.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="..\..\src\delay.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\rpxp.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\db.h">
